added more styles and a background img

--- a/css.html
+++ b/css.html
@@ -5,13 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>CSS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <script src="main.js"></script>
 </head>
 <body>
-    <h1>CSS stands for cascading stylesheet and makes our websites more pretty</h1>
-    <nav>
-        <a href="index.html">Go back to main page</a>
-    </nav>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Main</a></li>
+                <li><a href="html.html">HTML</a></li>
+                <li>CSS</li>
+                <li><a href="js.html">Javascript</a></li>
+                <li><a href="register.html">Registration</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section>
+        <h2>CSS reads as cascading style sheets</h2>
+        <p>We can make our websites more beautiful using them.</p>
+    </section>
 </body>
 </html>
